# requin-2023-experiment

./: .coveragerc  .gitignore  .isort.cfg  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  example.txt  liccheck_strategy.ini  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: conf.py  index.md
output_matbii/: MATB_EVENTS_example.xml  MATB_EVENTS_tutorial_10mins_seed_1.xml
src/matbexp/: __init__.py  gen_audio_stimuli.py  gen_matbii_events.py
src/matbexp/matbii/: convert_from_openmatb.py  matbii_comm_stems.json  matbii_events.py  matbii_helpers.py  matbii_params.json  matbii_tasks.py
src/matbexp/misc/: random.py  utils.py
src/matbexp/stimuli/: audio_stimuli.py  video_stimuli.py
tests/: conftest.py
tests/matbii/: test_convert_from_openmatb.py  test_matbii_events.py
tests/misc/: test_random.py  test_utils.py
tests/resources/: MATB_EVENTS_high_a_seed_81.xml  MATB_EVENTS_high_b_seed_181.xml  MATB_EVENTS_low_b_seed_9.xml  MATB_EVENTS_tutorial_10mins_seed_10.xml
tests/resources_generation/: generate_resources_matbii_events.py
tests/stimuli/: test_audio_stimuli.py  test_video_stimuli.py
